k8s-manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-native-app
  labels:
    name: cloud-native-app
